--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv-keywords": "^3.1.0",
+    "google-map-react": "^0.34.0",
+    "leaflet": "^1.3.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-leaflet": "^1.9.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
