--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "dependencies": {
     "ajv-keywords": "^3.1.0",
-    "google-map-react": "^0.34.0",
-    "leaflet": "^1.3.1",
+    "google-maps-react": "^1.1.11",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-leaflet": "^1.9.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
